# RustGame

./: .gitignore  RustGame.md  package-lock.json  package.json
backend/: Cargo.toml
backend/sqlite/: data.sql
backend/src/: app_state.rs  error.rs  main.rs  model.rs  router.rs  service.rs
frontend/: env.d.ts  package-lock.json
frontend/src/: App.vue  main.ts
frontend/src/components/: HomePage.vue
frontend/src/router/: index.ts
frontend/src/views/: Login.vue  Register.vue
