[package]
name = "RustGame-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
hex = "0.4.3"
rusqlite = {version="0.37.0", features = ["bundled"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = {version="1.48.0", features=["full"]}
